--- a/index.html
+++ b/index.html
@@ -27,24 +27,33 @@
             </div>
         </header>
         <main class="main">
-            <section class="try-now">
-                <div class="try-now-wrapper">
+            <section class="welcome">
+                <div class="welcome-wrapper">
                     <h1>Always<br>Ready to Code.</h1>
                     <p>Spin up fresh, automated dev environments<br>for each task, in the cloud,
                         in seconds.</p>
-                    <div class="try-now-button">
+                    <div class="welcome-button">
                         <a href="#">Try Now</a>
                         <p>Open a workspace.<br>Start from any Git context.</p>
                     </div>
-                    <div class="try-now-logos">
+                    <div class="welcome-logos">
                         <img src="img/fox.png" alt="fox">
                         <img src="img/cat.png" alt="cat">
                         <img src="img/bitbucket.png" alt="bitbucket">
                     </div>
                 </div>
-                <div class="try-now-img">
+                <div class="welcome-img">
                     <img src="img/comp.png" alt="comp">
                 </div>
+            </section>
+            <section class="info">
+                <p class="info-text">
+                    <span class="info-text-bold">Select project,</span>
+                    <span class="info-text-cross">
+                        check dependencies, checkout branch, view<br>readme.txt, install tools, run build, run test,
+                    </span>
+                    <span class="info-text-bold">start coding.</span>
+                </p>
             </section>
         </main>
         <footer class="footer">Footer</footer>
