did remote-gitpod

--- a/index.html
+++ b/index.html
@@ -46,14 +46,44 @@
                     <img src="img/comp.png" alt="comp">
                 </div>
             </section>
-            <section class="info">
-                <p class="info-text">
-                    <span class="info-text-bold">Select project,</span>
-                    <span class="info-text-cross">
+            <section class="simplification">
+                <p class="simplification-text">
+                    <span class="simplification-text-bold">Select project,</span>
+                    <span class="simplification-text-cross">
                         check dependencies, checkout branch, view<br>readme.txt, install tools, run build, run test,
                     </span>
-                    <span class="info-text-bold">start coding.</span>
+                    <span class="simplification-text-bold">start coding.</span>
                 </p>
+            </section>
+            <section class="prebuild">
+                <div class="prebuild-wrapper">
+                    <div class="prebuild-text">
+                        <h4>Think CI/CD for dev environments</h4>
+                        <p>We invented prebuilds so application code, configuration and infrastructure can all be stored
+                            as machine-executable code in your git repositories and applied to dev environments
+                            automatically and continuously.</p>
+                    </div>
+                    <div class="prebuild-buttons">
+                        <a href="#" class="prebuild-btn-more">More on prebuilds</a>
+                        <a href="#" class="prebuild-btn-doc">Documentation</a>
+                    </div>
+                </div>
+                <div class="prebuild-img">
+                    <img src="img/code.png" alt="code">
+                </div>
+            </section>
+            <section class="remote-gitpod">
+                <h2>Remote-first. Secure by design.</h2>
+                <div class="remote-gitpod-img">
+                    <img src="img/bigcode.png" alt="bigcode">
+                </div>
+                <p>You no longer need an over-powered laptop to code, Gitpod works just as<br>
+                    smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes<br>
+                    all source code and never stores it on insecure machines and networks.</p>
+                <div class="remote-gitpod-buttons">
+                    <a href="#" class="remote-gitpod-btn-chrome">Chrome Extension</a>
+                    <a href="#" class="remote-gitpod-btn-firefox">Firefox Extension</a>
+                </div>
             </section>
         </main>
         <footer class="footer">Footer</footer>
