--- a/index.html
+++ b/index.html
@@ -81,12 +81,191 @@
                     smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes<br>
                     all source code and never stores it on insecure machines and networks.</p>
                 <div class="remote-gitpod-buttons">
-                    <a href="#" class="remote-gitpod-btn-chrome">Chrome Extension</a>
-                    <a href="#" class="remote-gitpod-btn-firefox">Firefox Extension</a>
+                    <div class="remote-gitpod-wrapper">
+                        <a href="#" class="remote-gitpod-btn-chrome">
+                            <div class="remote-gitpod-border-radius">
+                                <img src="img/google.png" alt="google">Chrome Extension
+                            </div>
+                            <div class="remote-gitpod-corners-chrome"></div>
+                        </a>
+                    </div>
+                    <div class="remote-gitpod-wrapper">
+                        <a href="#" class="remote-gitpod-btn-firefox">
+                            <div class="remote-gitpod-border-radius">
+                                <img src="img/firefox.png" alt="firefox">Firefox Extension
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="reviews">
+                <h2>Used by 400,000+ developers.</h2>
+                <div class="reviews-wrapper-message">
+                    <article class="reviews-message">
+                        <p class="reviews-message-start-text">GitPod is incredibly cool.</p>
+                        <p>In my opinion, this is a big step in open source software
+                            contribution. I'm excited to see
+                            where we go from here.</p>
+                        <div class="reviews-message-user">
+                            <img src="img/ben.png" alt="ben">
+                            <div>
+                                <h5>Ben Halpern</h5>
+                                <p>Creator and Co-founder <b>@forem</b> and <b>@ThePracticalDev</b></p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="reviews-message">
+                        <p class="reviews-message-start-text">Let's say we were overwhelmed how smooth @gitpod
+                            workspaces creation & own Docker image for
+                            workspaces worked.</p>
+                        <p>Plus, installing @code extensions from the store and
+                            integrating @gitlab CI. That blew my
+                            mind entirely, and that is hard ;)</p>
+                        <div class="reviews-message-user">
+                            <img src="img/michael.png" alt="michael">
+                            <div>
+                                <h5>Michael Friedrich</h5>
+                                <p>Developer Evangelist <b>@GitLab</b></p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="reviews-message">
+                        <p>Look at any PR (pull request) in a full coding environment where you can edit, build, and
+                            test the PR code, by just prepending <br>"gitpod.io#" to the PR URL. Super useful for
+                            reviewing/testing stuff without having to check it out locally!</p>
+                        <div class="reviews-message-user">
+                            <img src="img/julius.png" alt="julius">
+                            <div>
+                                <h5>Julius Volz</h5>
+                                <p>Creator <b>@PrometheusIO</b></p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="reviews-logos">
+                    <div class="reviews-wrapper-logos">
+                        <img src="img/gitlab_logo.png" alt="gitlab_logo">
+                        <img src="img/freeCodeCamp_logo.png" alt="freeCodeCamp_logo">
+                        <img src="img/diwave_logo.png" alt="diwave_logo">
+                        <img src="img/google_logo.png" alt="google_logo">
+                        <img src="img/amazon_logo.png" alt="amazon_logo">
+                        <img src="img/facebook_logo.png" alt="facebook_logo">
+                        <img src="img/Uber_logo.png" alt="Uber_logo">
+                        <img src="img/openAI_logo.png" alt="openAI_logo">
+                        <img src="img/intel_logo.png" alt="intel_logo">
+                        <img src="img/theia_logo.png" alt="theia_logo">
+                        <img src="img/codeinst_logo.png" alt="codeinst_logo">
+                        <img src="img/4geeks_logo.png" alt="4geeks_logo">
+                    </div>
+                </div>
+            </section>
+            <section class="begin">
+                <h2 class="begin-title">Get started now</h2>
+                <div class="begin-wrapper">
+                    <div class="begin-connect">
+                        <div class="begin-connect-start-text">
+                            <h3>Connect Git repository</h3>
+                            <p>Select a Git provider to start with an existing<br>project from any Git context.</p>
+                        </div>
+                        <div class="begin-connect-buttons">
+                            <a href="#" class="begin-connect-btn-fox"><img src="img/fox_white.png"
+                                    alt="fox_white">Continue with GitLab</a>
+                            <a href="#" class="begin-connect-btn-github"><img src="img/github_white.png"
+                                    alt="github_white">Continue with GitHub</a>
+                            <a href="#" class="begin-connect-btn-bitbucket"><img src="img/bitbucket_white.png"
+                                    alt="bitbucket_white">Continue with
+                                Bitbucket</a>
+                        </div>
+                        <div class="begin-connect-end-text">
+                            <p>Or prefix any GitLab, GitHub or Bitbucket URL <br>with</p>
+                            <div class="begin-connect-gitpod">
+                                <p>gitpod.io/#</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="begin-launch">
+                        <h3>Launch an example workspace</h3>
+                        <p>Dive into one of our example workspaces</p>
+                        <div class="begin-launch-wrapper">
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/node.png" alt="node"> Node or TypeScript
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/python.png" alt="python">Python
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/go_27x27.png" alt="go">Go
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/rust.png" alt="rust">Rust
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/java.png" alt="java">Java
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                            <div class="begin-launch-row">
+                                <div class="begin-launch-img">
+                                    <img src="img/svetle.png" alt="svetle">Svelte
+                                </div>
+                                <a href="#">Launch workspace</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
-        <footer class="footer">Footer</footer>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-wrapper">
+                    <section class="footer-gitpod">
+                        <h5>Gitpod</h5>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </section>
+                    <section class="footer-developer">
+                        <h5>Developer</h5>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </section>
+                    <section class="footer-company">
+                        <h5>Company</h5>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </section>
+                    <section class="footer-legal">
+                        <h5>Legal</h5>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </section>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
