--- a/index.html
+++ b/index.html
@@ -230,40 +230,60 @@
         </main>
         <footer class="footer">
             <div class="footer-container">
-                <div class="footer-wrapper">
-                    <section class="footer-gitpod">
-                        <h5>Gitpod</h5>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                    </section>
-                    <section class="footer-developer">
-                        <h5>Developer</h5>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                    </section>
-                    <section class="footer-company">
-                        <h5>Company</h5>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                    </section>
-                    <section class="footer-legal">
-                        <h5>Legal</h5>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                    </section>
+                <div class="footer-content">
+                    <div class="footer-wrapper">
+                        <section class="footer-gitpod">
+                            <h5>Gitpod</h5>
+                            <a href="#">Home</a>
+                            <a href="#">Features</a>
+                            <a href="#">Pricing</a>
+                            <a href="#">Changelog</a>
+                            <a href="#">Self-Hosted</a>
+                            <a href="#">Gitpod vs GitHub<br>Codespaces</a>
+                            <a href="#">Status</a>
+                        </section>
+                        <section class="footer-developer">
+                            <h5>Developer</h5>
+                            <a href="#">Getting started</a>
+                            <a href="#">Screencasts</a>
+                            <a href="#">Blog</a>
+                            <a href="#">Documentation</a>
+                            <a href="#">Report a bug</a>
+                            <a href="#">Community</a>
+                        </section>
+                        <section class="footer-company">
+                            <h5>Company</h5>
+                            <a href="#">About</a>
+                            <a href="#">Careers</a>
+                            <a href="#">Contact</a>
+                            <a href="#">Media Kit</a>
+                        </section>
+                        <section class="footer-legal">
+                            <h5>Legal</h5>
+                            <a href="#">Imprint</a>
+                            <a href="#">Terms of Service</a>
+                            <a href="#">Privacy Policy</a>
+                        </section>
+                    </div>
+                    <hr>
+                    <div class="footer-logos">
+                        <div class="footer-logos-gitpod">
+                            <img src="img/gitpod_logo.png" alt="gitpod_logo">
+                            <p class="footer-logos-copyright">Copyright © 2021 Gitpod</p>
+                        </div>
+                        <div class="footer-logos-others">
+                            <img src="img/twitter2.png" alt="twitter">
+                            <img src="img/cat2.png" alt="cat">
+                            <img src="img/cloud.png" alt="cloud">
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="footer-cookies">
+                <p class="footer-cookies-text">This website uses cookies to enhance the user experience. Read our
+                    <span>privacy policy</span> for
+                    more info.</p>
+                <a href="#">Accept Cookies</a>
             </div>
         </footer>
     </div>
