--- a/index.html
+++ b/index.html
@@ -273,18 +273,18 @@
                             </p>
                         </div>
                         <div class="begin-connect-buttons">
-                            <a href="#" class="begin-connect-btn-fox">
+                            <button class="begin-connect-btn-fox">
                                 <img src="img/fox_white.png" alt="fox_white">
                                 Continue with GitLab
-                            </a>
-                            <a href="#" class="begin-connect-btn-github">
+                            </button>
+                            <button class="begin-connect-btn-github">
                                 <img src="img/github_white.png" alt="github_white">
                                 Continue with GitHub
-                            </a>
-                            <a href="#" class="begin-connect-btn-bitbucket">
+                            </button>
+                            <button class="begin-connect-btn-bitbucket">
                                 <img src="img/bitbucket_white.png" alt="bitbucket_white">
                                 Continue with Bitbucket
-                            </a>
+                            </button>
                         </div>
                         <div class="begin-connect-end-text">
                             <p>
@@ -313,54 +313,54 @@
                                     <img src="img/node.png" alt="node">
                                     Node or TypeScript
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                             <div class="begin-launch-row">
                                 <div class="begin-launch-img">
                                     <img src="img/python.png" alt="python">
                                     Python
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                             <div class="begin-launch-row">
                                 <div class="begin-launch-img">
                                     <img src="img/go_27x27.png" alt="go">
                                     Go
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                             <div class="begin-launch-row">
                                 <div class="begin-launch-img">
                                     <img src="img/rust.png" alt="rust">
                                     Rust
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                             <div class="begin-launch-row">
                                 <div class="begin-launch-img">
                                     <img src="img/java.png" alt="java">
                                     Java
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                             <div class="begin-launch-row">
                                 <div class="begin-launch-img">
                                     <img src="img/svetle.png" alt="svetle">
                                     Svelte
                                 </div>
-                                <a href="#">
+                                <button>
                                     Launch workspace
-                                </a>
+                                </button>
                             </div>
                         </div>
                     </div>
