added sticky and hover on header

--- a/index.html
+++ b/index.html
@@ -51,22 +51,26 @@
                     <h1>
                         Ready to Code.
                     </h1>
-                    <p>
-                        Spin up fresh, automated dev environments
-                    </p>
-                    <p>
-                        for each task, in the cloud, in seconds.
-                    </p>
+                    <div class="welcome-text">
+                        <p>
+                            Spin up fresh, automated dev environments
+                        </p>
+                        <p>
+                            for each task, in the cloud, in seconds.
+                        </p>
+                    </div>
                     <div class="welcome-button">
                         <a href="#">
                             Try Now
                         </a>
-                        <p>
-                            Open a workspace.
-                        </p>
-                        <p>
-                            Start from any Git context.
-                        </p>
+                        <div class="welcome-button-text">
+                            <p>
+                                Open a workspace.
+                            </p>
+                            <p>
+                                Start from any Git context.
+                            </p>
+                        </div>
                     </div>
                     <div class="welcome-logos">
                         <img src="img/fox.png" alt="fox">
@@ -126,15 +130,17 @@
                 <div class="remote-gitpod-img">
                     <img src="img/bigcode.png" alt="bigcode">
                 </div>
-                <p>
-                    You no longer need an over-powered laptop to code, Gitpod works just as
-                </p>
-                <p>
-                    smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes
-                </p>
-                <p>
-                    all source code and never stores it on insecure machines and networks.
-                </p>
+                <div class="remote-gitpod-text">
+                    <p>
+                        You no longer need an over-powered laptop to code, Gitpod works just as
+                    </p>
+                    <p>
+                        smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes
+                    </p>
+                    <p>
+                        all source code and never stores it on insecure machines and networks.
+                    </p>
+                </div>
                 <div class="remote-gitpod-buttons">
                     <div class="remote-gitpod-wrapper">
                         <a href="#" class="remote-gitpod-btn-chrome">
