added hover for page

--- a/index.html
+++ b/index.html
@@ -488,12 +488,12 @@
             <div class="footer-cookies">
                 <p class="footer-cookies-text">
                     This website uses cookies to enhance the user experience. Read our
-                    <span>
+                    <a href="#" class="footer-cookies-policy">
                         privacy policy
-                    </span>
+                    </a>
                     for more info.
                 </p>
-                <a href="#">
+                <a href="#" class="footer-cookies-accept">
                     Accept Cookies
                 </a>
             </div>
